feat: change color

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,6 @@
 body {
     background-color: #333;
-    color: #CCF;
+    color: #FFD;
     font-family: 'Montserrat', Helvetica, Arial, sans-serif;
     font-size: 100%;
     line-height: 8vmin;
