--- a/src/app/slides/slides.component.html
+++ b/src/app/slides/slides.component.html
@@ -1,3 +1,3 @@
-<main (swipeleft)="handleSwipeLeft()" (swiperight)="handleSwipeRight()" (window:keyup)="handleKeyUp($event)">
+<main (swipeleft)="handleSwipeLeft()" (swiperight)="handleSwipeRight()">
     <router-outlet></router-outlet>
 </main>
