fix: update Angular to version 6

--- a/src/app/slides/slide-five/slide-five.component.html
+++ b/src/app/slides/slide-five/slide-five.component.html
@@ -1,5 +1,5 @@
 <h2>Backporting the new API</h2>
-<wac-prism language="javascript"><!-- htmlmin:ignore -->if (!audioBufferSourceNode.noteOn) &#123;
+<wac-prism language="javascript" ngPreserveWhitespaces><!-- htmlmin:ignore -->if (!audioBufferSourceNode.noteOn) &#123;
     audioBufferSourceNode.noteOn = (when) =&gt; &#123;
         audioBufferSourceNode.start(when);
     &#125;;
