--- a/src/app/slides/slide-four/slide-four.component.html
+++ b/src/app/slides/slide-four/slide-four.component.html
@@ -1,5 +1,5 @@
 <h2>Web Audio Quiz</h2>
-<wac-prism language="javascript"><!-- htmlmin:ignore -->audioBufferSourceNode.nodeOn(0);
+<wac-prism language="javascript" ngPreserveWhitespaces><!-- htmlmin:ignore -->audioBufferSourceNode.nodeOn(0);
 audioBufferSourceNode.nodeOff(10);<!-- htmlmin:ignore --></wac-prism>
 <span>
     <a href="https://www.w3.org/TR/2012/WD-webaudio-20120802">https://www.w3.org/TR/2012/WD-webaudio-20120802</a>
