--- a/src/app/slides/slide-nine/slide-nine.component.html
+++ b/src/app/slides/slide-nine/slide-nine.component.html
@@ -1,5 +1,5 @@
 <h2>Fixes work forever</h2>
-<wac-prism language="javascript"><!-- htmlmin:ignore -->if (analyserNode.getFloatTimeDomainData === undefined) &#123;
+<wac-prism language="javascript" ngPreserveWhitespaces><!-- htmlmin:ignore -->if (analyserNode.getFloatTimeDomainData === undefined) &#123;
     analyserNode.getFloatTimeDomainData = (array) =&gt; &#123;
         // ... implementation of missing behaviour
     &#125;
