--- a/src/app/slides/slide-twelve/slide-twelve.component.html
+++ b/src/app/slides/slide-twelve/slide-twelve.component.html
@@ -1,5 +1,5 @@
 <h2>Integration test</h2>
-<wac-prism language="javascript"><!-- htmlmin:ignore -->import &#123; AudioContext &#125; from 'audio-context-polyfill';
+<wac-prism language="javascript" ngPreserveWhitespaces><!-- htmlmin:ignore -->import &#123; AudioContext &#125; from 'audio-context-polyfill';
 
 it('should have a createGain() method', () =&gt; &#123;
     const audioContext = new AudioContext();
