--- a/src/app/slides/slide-eight/slide-eight.component.html
+++ b/src/app/slides/slide-eight/slide-eight.component.html
@@ -1,5 +1,5 @@
 <h2>Patching the prototype</h2>
-<wac-prism language="javascript"><!-- htmlmin:ignore -->if (!AudioContext.prototype.hasOwnProperty('createGain')) &#123;
+<wac-prism language="javascript" ngPreserveWhitespaces><!-- htmlmin:ignore -->if (!AudioContext.prototype.hasOwnProperty('createGain')) &#123;
     AudioContext.prototype.createGain
         = AudioContext.prototype.createGainNode;
 &#125;<!-- htmlmin:ignore --></wac-prism>
