--- a/src/app/slides/slide-eleven/slide-eleven.component.html
+++ b/src/app/slides/slide-eleven/slide-eleven.component.html
@@ -1,4 +1,4 @@
 <h2>separate polyfill from business logic</h2>
-<wac-prism language="javascript"><!-- htmlmin:ignore -->import &#123; AudioContext &#125; from 'audio-context-polyfill';
+<wac-prism language="javascript" ngPreserveWhitespaces><!-- htmlmin:ignore -->import &#123; AudioContext &#125; from 'audio-context-polyfill';
 
 // use the AudioContext here without any special treatment.<!-- htmlmin:ignore --></wac-prism>
