--- a/src/app/slides/slide-seven/slide-seven.component.html
+++ b/src/app/slides/slide-seven/slide-seven.component.html
@@ -1,5 +1,5 @@
 <h2>AudioContext monkeypatch</h2>
-<wac-prism language="javascript"><!-- htmlmin:ignore -->if (window.hasOwnProperty('webkitAudioContext') &&
+<wac-prism language="javascript" ngPreserveWhitespaces><!-- htmlmin:ignore -->if (window.hasOwnProperty('webkitAudioContext') &&
         !window.hasOwnProperty('AudioContext')) &#123;
     window.AudioContext = webkitAudioContext;
 &#125;<!-- htmlmin:ignore --></wac-prism>
