--- a/src/app/slides/slide-six/slide-six.component.html
+++ b/src/app/slides/slide-six/slide-six.component.html
@@ -1,5 +1,5 @@
 <h2>Reimplementing the new API</h2>
-<wac-prism language="javascript"><!-- htmlmin:ignore -->if (!audioBufferSourceNode.start) &#123;
+<wac-prism language="javascript" ngPreserveWhitespaces><!-- htmlmin:ignore -->if (!audioBufferSourceNode.start) &#123;
     audioBufferSourceNode.start = (when, offset, duration) =&gt; &#123;
         if (offset || duration) &#123;
             audioBufferSourceNode.noteGrainOn(
