--- a/src/app/slides/slide-ten/slide-ten.component.html
+++ b/src/app/slides/slide-ten/slide-ten.component.html
@@ -1,5 +1,5 @@
 <h2>Expectation test</h2>
-<wac-prism language="javascript"><!-- htmlmin:ignore -->it('should have no createGain() method', () =&gt; &#123;
+<wac-prism language="javascript" ngPreserveWhitespaces><!-- htmlmin:ignore -->it('should have no createGain() method', () =&gt; &#123;
     const audioContext = new AudioContext();
 
     expect(audioContext.createGain).to.be.undefined;
