--- a/src/app/slides/slides.component.css
+++ b/src/app/slides/slides.component.css
@@ -1,4 +1,15 @@
 main {
+    box-sizing: border-box;
     height: 100%;
+    margin: 0;
+    padding: 3.9vw;
     width: 100%;
+}
+
+@media (min-aspect-ratio: 4/3) {
+
+    main {
+        padding: 5.2vh;
+    }
+
 }
