--- a/src/app/slides/slide-sixteen/slide-sixteen.component.css
+++ b/src/app/slides/slide-sixteen/slide-sixteen.component.css
@@ -11,7 +11,7 @@ svg {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     margin: 0 auto;
     stroke: #000;
-    width: 100vmin;
+    width: 100%;
 }
 
 svg .clickable {
