fix: rephrase slide title

--- a/src/app/slides/slide-six/slide-six.component.html
+++ b/src/app/slides/slide-six/slide-six.component.html
@@ -1,4 +1,4 @@
-<h2>Reimplementing the new API</h2>
+<h2>Implementing the new API</h2>
 <wac-prism language="javascript" ngPreserveWhitespaces><!-- htmlmin:ignore -->if (!audioBufferSourceNode.start) &#123;
     audioBufferSourceNode.start = (when, offset, duration) =&gt; &#123;
         if (offset || duration) &#123;
