style: close empty tags

--- a/src/app/slides/slide-one/slide-one.component.html
+++ b/src/app/slides/slide-one/slide-one.component.html
@@ -1,4 +1,4 @@
 <h1>Noiseless Web Audio tests</h1>
 <span>or</span>
-<h2>continuous deployment<br>without<br>continuous annoyment &trade;</h2>
+<h2>continuous deployment<br />without<br />continuous annoyment &trade;</h2>
 <p><a href="https://chrisguttandin.github.io/web-audio-conference-2017">bit.ly/wac-2017</a></p>
